# gamblint

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
backend/: app.py  database_gateway.py  enums.py  init_local_db.py  models.py  peek_db.py  pyproject.toml  reset_local_db.py  test_api_flow.py
backend/agent_algorithms/: agent.py  algorithm_benchmarks.py  average_agent.py  benchmark.py  constant_agent.py  heuristic_agent.py  random_agent.py  single_path_agent.py
backend/api_routes/: api.py
backend/game_engine/: depleting_dice.py  game.py  game_state.py
backend/tests/: agent_test.py  database_gateway_test.py  dice_test.py  expectimax_agent_test.py  game_test.py  heuristic_agent_test.py  random_agent_test.py  routes_test.py  single_path_agent_test.py
research/: 00index.md  README.md  conjectures.md  definitions.md  derivations.md  pyproject.toml  reference.md  results.md
research/data/: expectimax_agent_10000.parquet  gamblers_fallacy_agent_10000.parquet  invariant_agent_10000.parquet  random_agent_10000.parquet  reflection_agent_10000.parquet  single_path_agent_10000.parquet
research/data/metric_tables/: compare_csvs.ipynb
research/data/metric_tables/average_agent/: average_agent.csv  average_agent_by_guess.csv  average_agent_by_peeks.csv  average_agent_by_roll.csv
research/data/metric_tables/average_agent_/: average_agent__by_guess.csv  average_agent__by_roll.csv
research/data/metric_tables/constant_agent_10/: constant_agent_10.csv  constant_agent_10_by_guess.csv  constant_agent_10_by_peeks.csv  constant_agent_10_by_roll.csv
research/data/metric_tables/constant_agent_10_/: constant_agent_10_.csv  constant_agent_10__by_guess.csv  constant_agent_10__by_roll.csv
research/data/metric_tables/constant_agent_11/: constant_agent_11.csv  constant_agent_11_by_guess.csv  constant_agent_11_by_peeks.csv  constant_agent_11_by_roll.csv
research/data/metric_tables/constant_agent_11_/: constant_agent_11__by_guess.csv  constant_agent_11__by_roll.csv
research/data/metric_tables/constant_agent_12/: constant_agent_12.csv  constant_agent_12_by_guess.csv  constant_agent_12_by_peeks.csv  constant_agent_12_by_roll.csv
research/data/raw/: average_agent_10000.parquet  constant_agent_10_10000.parquet  constant_agent_11_10000.parquet  constant_agent_12_10000.parquet  constant_agent_2_10000.parquet  constant_agent_3_10000.parquet  constant_agent_4_10000.parquet  constant_agent_5_10000.parquet  constant_agent_6_10000.parquet  constant_agent_7_10000.parquet  constant_agent_8_10000.parquet  constant_agent_9_10000.parquet  expectimax_agent_10000.parquet  gamblers_fallacy_agent_10000.parquet  invariant_agent_10000.parquet  random_agent_10000.parquet  reflection_agent_10000.parquet  single_path_agent_10000.parquet
research/figure_generators/: payout.py
research/figure_generators/agent_comparison_generators/: baseline_graphs.py  graph_config.py  graph_utils.py  misc_graphs.py  overall_graphs.py  per_algorithm.py
research/metric_generators/: metrics_generator.py
research/proofs/: p1_optimum_guess_function.md  p2_maximum_payout_function.md  p3_invariant_sum.md  p4_game_state_transition.md  p5_peek_liklihood_given_state.md  p6_state_liklihood.md  p7_peeks_likelihood_given_state.md  p8_next_peek_liklihood.md  p9_expected_value.md
research/simulations/: algorithm_metrics.py  metrics_generator.py  metrics_testing.py  payout.py
(+118 files in other folders)
