[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-dice-engine"
version = "0.1.0"
description = "A Bayesian dice rolling and simulation engine"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # 'dataclasses' and 'random' are part of Python's standard library,
    # so no external runtime dependencies are required here.
    "pytest-mock>=3.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
