[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-dice-engine"
version = "0.1.0"
description = "A Bayesian dice rolling and simulation engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Keep this empty until you need runtime packages (like numpy or scipy)
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
