[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-dice-engine"
version = "0.1.0"
description = "A Bayesian dice rolling and simulation engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]