[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.5.0",
    "kaleido>=1.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "sci-learn>=0.1.4",
    "scikit-learn>=1.9.0",
]
